--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,55 +1,60 @@
-@font-face {
-  font-family: 'iconfont';
-  /* project id 682850 */
-  src: url('//at.alicdn.com/t/font_682850_58yfbhz7jvf.eot');
-  src: url('//at.alicdn.com/t/font_682850_58yfbhz7jvf.eot?#iefix') format('embedded-opentype'),
-    url('//at.alicdn.com/t/font_682850_58yfbhz7jvf.woff') format('woff'),
-    url('//at.alicdn.com/t/font_682850_58yfbhz7jvf.ttf') format('truetype'),
-    url('//at.alicdn.com/t/font_682850_58yfbhz7jvf.svg#iconfont') format('svg');
-}
-
-@font-face {
-  font-family: 'meituan';
-  src: url(//s0.meituan.net/bs/fe-web-meituan/c19c6e9/font/home-category-iconfont.eot?t=1503027869484);
-    src: url(//s0.meituan.net/bs/fe-web-meituan/c19c6e9/font/home-category-iconfont.eot?t=1503027869484#iefix) format('embedded-opentype'),
-    url(//s0.meituan.net/bs/fe-web-meituan/c19c6e9/font/home-category-iconfont.woff?t=1503027869484) format('woff'),
-    url(//s0.meituan.net/bs/fe-web-meituan/c19c6e9/font/home-category-iconfont.ttf?t=1503027869484) format('truetype'),
-    url(//s0.meituan.net/bs/fe-web-meituan/c19c6e9/font/home-category-iconfont.svg?t=1503027869484#home-category-iconfont) format('svg')
-}
-
-.layout-blank{
-  background-color: #fff;
-  color: #2e2f30;
-  letter-spacing: 0.5px;
-  font-family: "Source Sans Pro", Arial, sans-serif;
-  height: 100vh;
+body {
   margin: 0;
+  color: #333;
 }
-body{
+
+ul {
   margin: 0;
   padding: 0;
+  list-style-type: none;
 }
-body *{
+
+p {
   margin: 0;
   padding: 0;
 }
 
-footer{
-  text-align: center;
+a {
+  text-decoration: none;
 }
 
-a, a:hover, a:focus, a:visited{
-  color: #41B883;
+#__nuxt {
+  width: 100%;
+  margin: 0 auto;
 }
 
-.logo {
-  width: 243px;
-  height: 218px;
+/* #__layout {
+  width: 100%;
+} */
+
+.el-header {
+  width: 100%;
+  padding: 0;
+  background-color: #ecf5ff;
 }
 
-.page-enter-active, .page-leave-active{
-  transition: opacity .5s
+.search-bar {
+  width: 100%;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #DCDFE6;
 }
-.page-enter, .page-leave-active{
-  opacity: 0
+
+.el-main {
+  width: 100%;
+  padding: 0;
+  background-color: #f6f6f6;
+}
+
+.el-footer {
+  width: 100%;
+  padding: 0;
+  background-color: #f0f0f0;
+}
+
+.main-layout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
