--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
   color: #333;
+  margin-bottom: -15px;
+  margin-right: -15px;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6, p, ul, li {
